# cyusbserial

./: .gitignore  ChangeLog.md  Makefile  README.md  Setup.hs  cyusbserialhs.cabal  stack.yaml
app/: Main.hs
c/: .gitignore  CY8CKIT-049-42xx.cyusb  Makefile  chksum.c  cy1.c  cy2.c  extras.c  extras.h  i2c.c  read-config.c
cypress/darwin/: CyUSBCommon.h  README.txt  libcyusbserial.dylib  libusb-1.0.0.dylib
cypress/linux/: CyUSBCommon.h  CyUSBSerial.h
cypress/mingw32/: CyUSBSerial.h
cypress/windows/: CyUSBSerial.h
docs/: CY8CKIT-049-42xx.md  Internals.md  capabilities.xlsx  parse.py
src/System/Cypress/: USBSerial.chs
src/System/Cypress/Safe/: USBSerial.hs
src/System/Cypress/Safe/USBSerial/: Extras.hs  I2C.hs  JTAG.hs  PHDC.hs  SPI.hs  UART.hs
src/System/Cypress/Safe/USBSerial/Internal/: Utils.hs
src/System/Cypress/USBSerial/: Extras.chs  I2C.chs  JTAG.chs  PHDC.chs  SPI.chs  UART.chs
src/System/Cypress/USBSerial/Internal/: FiniteLengthString.chs  USBSerial.chs
test/: CyUSBSerial.h  Spec.hs
